# darwin_simulation

./: README.md
darwin_control/: CMakeLists.txt  package.xml
darwin_control/config/: localisation.yaml
darwin_control/launch/: darwin_control.launch  teleop_keyboard.launch
darwin_control/scripts/: teleop_keyboard.py
darwin_description/: model.config
darwin_description/meshes/realsense/: realsense.dae
darwin_description/urdf/: darwin.urdf  realsense-RS200.macro.xacro
darwin_gazebo/: CMakeLists.txt  package.xml  setup.py
darwin_gazebo/launch/: darwin_gazebo.launch  darwin_obs_gazebo.launch  realsense.launch
darwin_gazebo/scripts/: image_view.cpp  walker.py  walker_demo.py
darwin_gazebo/worlds/: darwin_hall.world  world_with_obs.world
orb_slam_2_ros/ros/launch/: orb_slam2_r200_mono.launch  orb_slam_mono.launch
orb_slam_2_ros/ros/scripts/: Mono_node.py
