<?xml version="1.0"?>
<package>
  <name>darwin_control</name>
  <version>1.0.0</version>
  <description>The darwin_control package</description>

  <maintainer email="pc@humarobotics.com">Philippe Capdepuy</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/darwin_control</url>

  <author email="pc@humarobotics.com">Philippe Capdepuy</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>darwin_description</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <!-- <run_depend>diff_drive_controller</run_depend> -->
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>joy</run_depend>
<!--  <run_depend>gazebo_ros</run_depend> -->

<run_depend>robot_localization</run_depend>
<run_depend>rostopic</run_depend>
<run_depend>robot_state_publisher</run_depend>
<run_depend>controller_manager</run_depend>
<run_depend>teleop_twist_joy</run_depend>
<run_depend>twist_mux</run_depend>
<run_depend>rospy</run_depend>
<run_depend>geometry_msgs</run_depend>


</package>